<resources>
    <string name="app_name">ContactDatabase</string>
    <string name="hint_name">Name</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_email">Email</string>
    <string name="btn_select_image">Choose Picture</string>
    <string name="desc_selected_image">Avatar has Choose</string>
    <string name="btn_view_details">VIEW DETAILS</string>
    <string name="btn_save_details">SAVE DETAILS</string>
    <string name="btn_back">Back</string>
    <string name="list_title">List User</string>
</resources>
