<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="?android:attr/buttonBarStyle">

    <EditText
        android:id="@+id/etName"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etDob"
        android:hint="@string/hint_dob"
        android:inputType="date"
        android:autofillHints="birthDateDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spinnerAvatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnView"
            android:text="@string/btn_view_details"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSave"
            android:text="@string/btn_save_details"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
